# js8call-Android-port

./: .gitignore  CMakeLists.txt  CMakeLists.txt.legacy  Configuration.cpp  FrequencyList.cpp  HelpTextWindow.cpp  JS8Call-improved.desktop  JS8MessageBox.cpp  JS8MessageBox.hpp  MultiSettings.cpp  NetworkAccessManager.hpp  README.md  js8call.desktop  js8call.pro  logqso.cpp  main.cpp  mainwindow.cpp  mainwindow.h  widegraph.cpp  wsjtx_config.h
.github/workflows/: android-build.yml  build-caches.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
.github/workflows/scripts/: ci-windows-installer.iss
adapters/android/: CMakeLists.txt  README.md
adapters/android/include/js8core/android/: audio_oboe.hpp  logger_android.hpp  network_android.hpp  rig_android.hpp  scheduler_android.hpp  storage_android.hpp
adapters/android/jni/: CMakeLists.txt  README.md  bluetooth_serial_bridge.hpp  bluetooth_serial_bridge_jni.cpp  hamlib_rig_control_jni.cpp  js8_engine_jni.cpp  js8_engine_jni.h  js8_jni_methods.cpp  js8core-jni.map  usb_serial_bridge.hpp  usb_serial_bridge_jni.cpp
adapters/android/jni/examples/: AndroidManifest.xml  MainActivity.kt  activity_main.xml  build.gradle.kts
adapters/android/jni/java/: JS8CallbackHandler.java
adapters/android/jni/kotlin/: BluetoothSerialBridge.kt  BluetoothSerialPortCatalog.kt  HamlibRigCatalog.kt  HamlibRigControl.kt  JS8AudioHelper.kt  JS8Engine.kt  SntpClient.kt  UsbSerialBridge.kt  UsbSerialPortCatalog.kt
adapters/android/src/: audio_oboe.cpp  logger_android.cpp  network_android.cpp  rig_android.cpp  scheduler_android.cpp  storage_android.cpp
adapters/qt/: CMakeLists.txt  Makefile  cmake_install.cmake
adapters/qt/include/js8core/qt/: audio_adapter.hpp  engine_adapter.hpp  logger_adapter.hpp  network_adapter.hpp  rig_adapter.hpp  varicode_adapter.hpp
adapters/qt/src/: audio_adapter.cpp  engine_adapter.cpp  logger_adapter.cpp  network_adapter.cpp  rig_adapter.cpp  varicode_adapter.cpp
android/: CMakeLists.txt  README.md  build-fftw3.sh  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/js8call/example/: MainActivity.kt
android/app/src/main/java/com/js8call/example/model/: DecodedMessage.kt  EngineState.kt
android/app/src/main/java/com/js8call/example/service/: IcomCIVClient.kt  JS8EngineService.kt  RigCtlClient.kt  UsbPermissionHelper.kt
android/app/src/main/java/com/js8call/example/ui/: DecodeFragment.kt  DecodeListAdapter.kt  DecodeViewModel.kt  GridSquarePreference.kt  MonitorFragment.kt  MonitorViewModel.kt  SettingsFragment.kt  TransmitFragment.kt  TransmitQueueAdapter.kt  TransmitViewModel.kt  WaterfallRenderer.kt  WaterfallView.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_decodes.xml  fragment_monitor.xml  fragment_transmit.xml  item_decode.xml  preference_grid_square.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/navigation/: mobile_navigation.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml  preferences.xml  usb_device_filter.xml
android/hamlib/: build-hamlib-android.sh
android/hamlib/patches/: 0001-android-usb-serial-bridge.patch  0002-android-ars-rotator-no-pthread-cancel.patch
android/js8core-lib/: build.gradle.kts  proguard-rules.pro
android/js8core-lib/src/main/: AndroidManifest.xml
android/libs/fftw3/: README.md
android/libs/fftw3/arm64-v8a/lib/: libfftw3f.la
android/libs/fftw3/arm64-v8a/lib/cmake/fftw3/: FFTW3fConfig.cmake
android/libs/fftw3/arm64-v8a/lib/pkgconfig/: fftw3f.pc
android/libs/fftw3/armeabi-v7a/lib/: libfftw3f.la
android/libs/fftw3/armeabi-v7a/lib/cmake/fftw3/: FFTW3fConfig.cmake
android/libs/fftw3/armeabi-v7a/lib/pkgconfig/: fftw3f.pc
android/libs/fftw3/x86/lib/: libfftw3f.la
android/libs/fftw3/x86/lib/cmake/fftw3/: FFTW3fConfig.cmake
android/libs/fftw3/x86/lib/pkgconfig/: fftw3f.pc
android/libs/fftw3/x86_64/lib/: libfftw3f.la
android/libs/fftw3/x86_64/lib/cmake/fftw3/: FFTW3fConfig.cmake
android/libs/fftw3/x86_64/lib/pkgconfig/: fftw3f.pc
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/include/js8core/: audio.hpp  clock.hpp  decoder.hpp  decoder_bridge.hpp  decoder_state.hpp  engine.hpp  logger.hpp  network.hpp  rig.hpp  storage.hpp  types.hpp
core/include/js8core/compat/: concepts.hpp  numbers.hpp
core/include/js8core/dsp/: flatten.hpp  resampler.hpp
core/include/js8core/protocol/: constants.hpp  costas.hpp  jsc.hpp  submode.hpp  time_utils.hpp  varicode.hpp
core/include/js8core/tx/: modulator.hpp
core/src/: placeholder.cpp
core/src/decoder/: legacy_decoder.cpp
core/src/dsp/: flatten.cpp  resampler.cpp
core/src/engine/: engine.cpp
core/src/protocol/: constants.cpp  costas.cpp  jsc.cpp  jsc_data.hpp  jsc_list.cpp  jsc_map.cpp  submode.cpp  time_utils.cpp  varicode.cpp
core/src/tx/: modulator.cpp
core/tools/: varicode_roundtrip.cpp
docs/: backend-refactor-plan.md
